# libmodapicxx

./: CMakeLists.txt  SharemindLibModapiCxxConfig.cmake.in  SharemindLibModapiCxxConfigVersion.cmake.in  SharemindLibmodapiCxxConfig.cmake.in  SharemindLibmodapiCxxConfigVersion.cmake.in
src/: libmodapicxx.h
